Agregado endpoint para regimen de información de ventas
