# routes/api.php
@@ -100,4 +100,7 @@ Route::group(['middleware' => 'jwt.auth'], function () {
     Route::resource('periodosfiscales', 'PeriodoFiscalController',
         ['only' => ['index', 'show', 'store', 'update', 'destroy'],
             'parameters' => ['periodosfiscales' => 'periodofiscal']]);
+
+    Route::get('reginfoventas/comprobantes', 'RegimenInformativoVentasController@reginfo_comprobantes');
+    Route::get('reginfoventas/alicuotas', 'RegimenInformativoVentasController@reginfo_alicuotas');
 });
